# xroad

./: .gitignore  Dockerfile  README.md  README.nd  docker-compose.yml  main.py  mongo-init.js  pyproject.toml
src/: auth_utils.py  deps.py  route_deps.py  validator.py
src/models/: __init__.py  business.py  event.py  pydantic_object_id.py  service.py  user.py
src/models/activity/: __init__.py  acctivity_create.py  activity.py  activity_create.py  activity_update.py
src/models/booking/: __init__.py  booking.py  booking_create.py
src/models/business/: business.py  business_create.py
src/models/service/: service.py  service_create.py  service_slot.py  service_slot_booking.py  service_slot_create.py
src/models/slot/: __init__.py  slot.py  slot_create.py  slot_update.py
src/models/user/: __init__.py  business.py  business_create.py  business_update.py  person.py  person_create.py  person_update.py  user.py  user_create.py  user_signup.py  user_update.py
src/routes/: __init__.py  activities.py  activity.py  booking.py  bookings.py  business.py  businesses.py  service.py  slot.py  user.py  users.py
src/schemas/: __init__.py  activity.py  booking.py  business.py  event.py  person.py  slot.py  user.py
src/schemas/activity/: activity.py  activity_booking.py  activity_slot.py  activity_slot_booking.py
src/schemas/service/: service.py  service_booking.py  service_slot.py  service_slot_booking.py
