[tool.poetry]
name = "xroad"
version = "0.1.0"
description = ""
authors = ["Artem Vopilov <mister.0025@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.91.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
