[tool.poetry]
name = "xroad"
version = "0.1.0"
description = ""
authors = ["Artem Vopilov <mister.0025@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.1"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
mongoengine = "^0.27.0"
pyyaml = "6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
